client/src/styles/index.css
@import './DisplayWorldDetails.css';
@import './ChooseCategoryToUpdate.css';
@import './App.css';

body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

#map-container {
  height: 400px;
}

#map {
  height: 400px;
}

.btn-group {
  width: 100%;
}

.btn-group .btn {
  width: 100%;
}

